Use UI tile layout for colors pattern

--- a/_patterns/globals/colors.html
+++ b/_patterns/globals/colors.html
@@ -6,30 +6,16 @@ description: The site colors.
 show_source: false
 ---
 
-<style type="text/css">
-    .pattern-box {
-        border-radius: 3px;
-        display: block;
-        height:150px;
-        width: 100%;
-        min-width: 150px;
-    }
-</style>
-
 {%- for group in site.data.colors -%}
-<h2>{{ group.title | capitalize }}</h2>
-<div class="gallery">
-    {%- for color in group.colors -%}
-        <figure class="gallery-item">
-            <div class="gallery-icon">
-                <span class="pattern-box" style="background: #{{ color.hex }};"></span>
-            </div>
-            <figcaption class="wp-caption-text gallery-caption">
-                @{{ color.name | slugify }}<br>
-                hex: {{ color.hex }}<br>
-                rgb: {{ color.rgb }}
-            </figcaption>
-        </figure>
-    {%- endfor -%}
-</div>
+    <h2>{{ group.title | capitalize }}</h2>
+    <div class="ui--tiles">
+        {%- for color in group.colors -%}
+        <p>
+            <span class="ui--pattern-box" style="background: #{{ color.hex }};"></span>
+            @{{ color.name | slugify }}<br>
+            hex: {{ color.hex }}<br>
+            rgb: {{ color.rgb }}
+        </p>
+        {%- endfor -%}
+    </div>
 {%- endfor -%}
