--- a/_patterns/elements/buttons.html
+++ b/_patterns/elements/buttons.html
@@ -2,5 +2,43 @@
 category: 2. Elements
 order: 1
 title: Buttons
-description: The site buttons.
+description: HRS button elements.
+show_source: true
 ---
+
+<main style="margin: 0;">
+
+	<h3>Primary Buttons</h3>
+
+	<button>Button</button>
+	<a class="button" href="#">Button (Link)</a>
+	<input type="submit" value="Input Submit">
+	<input type="button" value="Input Button">
+
+	<h3>Secondary Buttons</h3>
+
+	<button class="button-secondary">Secondary Button</button>
+	<a class="button-secondary" href="#">Secondary Button (Link)</a>
+	<input class="button-secondary" type="reset" value="Input Reset">
+
+	<h3>Flat Button Links</h3>
+
+	<a class="button-flat" href="#">Flat</a>
+
+	<h3>Deprecated Classes</h3>
+
+	<button class="hrs-button">HRS-Button Button</button>
+	<a href="#" class="hrs-button">HRS Button Link</a>
+	<button class="hrs-button hrs-button-priority">HRS Priority Button</button>
+	<a href="#" class="hrs-button hrs-button-priority">HRS Priority Button Link</a>
+	<button class="hrs-button hrs-button-white">HRS White Button</button>
+	<a href="#" class="hrs-button hrs-button-white">HRS White Button Link</a>
+
+	<h3>Deprecated Buttons</h3>
+
+	<p id="button_holder"><a href="#" class="button">[Dep] Holder</a></p>
+	<a href="#" class="new_button">[Dep] New Button</a>
+	<a href="#" class="new_button_back">[Dep] New Back Button</a>
+	<a href="#" class="new_button_benefits">[Dep] New Button Benefits</a>
+
+</main>
