--- a/_patterns/globals/typography.html
+++ b/_patterns/globals/typography.html
@@ -1,25 +1,31 @@
 ---
 category: 1. Global
-order: 3
+order: 4
 title: Typography
-description: The site typography.
+description: An overview of typographic styles.
 show_source: true
 ---
 
-<h1>Heading 1</h1>
+<h1>Heading Level 1</h1>
 
-<h2>Heading 2</h2>
+<h2>Heading Level 2</h2>
 
-<h3>Heading 3</h3>
+<h3>Heading Level 3</h3>
 
-<h4>Heading 4</h4>
+<h4>Heading Level 4</h4>
 
-<h5>Heading 5</h5>
+<h5>Heading Level 5</h5>
 
-<h6>Heading 6</h6>
+<h6>Heading Level 6</h6>
 
-<h2>Paragraphs</h2>
+<p>Human Resource Services provides support services to the Washington State University community to aid in the fulfillment of the institution’s strategic goals and to promote an engaged, high performing, and inclusive campus community. Human Resource Services serves those who serve our students.</p>
+<p>Each college, area and department system-wide has a HR service team assigned to provide consulting and employment services. Each HR service team consists of a Human Resource Consultant and Human Resource Assistant.</p>
+<p>HR services teams provide expertise, consultation, and education on a variety of human resource topics including organizational effectiveness, employee relations, classification/compensation and recruitment, leave processes and training and development.  The HR service teams were developed to become familiar with the unique issues and concerns of individual departments or units. <a href="#">Paragraph link text</a>. As always, any of the HRS staff are available to assist.</p>
 
-<p>Macaroon jujubes liquorice liquorice. Caramels marshmallow chupa chups pastry croissant sweet roll. Cotton candy jelly-o donut. Donut lemon drops pastry donut. Brownie toffee jelly cheesecake macaroon. Macaroon cheesecake soufflé tootsie roll dragée. Pie cookie jelly beans jelly jelly-o chocolate cake lemon drops macaroon powder. Lollipop jelly beans dessert chocolate bar cotton candy gingerbread macaroon. Cake marshmallow tootsie roll lollipop cheesecake pastry muffin macaroon.</p>
-<p>Jelly toffee sweet cake gingerbread. Cake cake powder liquorice biscuit bear claw sesame snaps biscuit jujubes. Apple pie pie gummi bears tart gummi bears jelly cotton candy. Oat cake cake tiramisu. Jelly beans tootsie roll gummi bears gummi bears macaroon chocolate toffee lollipop. Cheesecake tiramisu sugar plum jelly beans wafer topping. Sesame snaps cake carrot cake bear claw. Danish gummi bears wafer cake pastry chupa chups soufflé.</p>
-<p>Macaroon chocolate tootsie roll jelly brownie. Halvah wafer bear claw wafer chocolate bar. Sweet roll sesame snaps pie cookie brownie muffin tart chocolate cake. Candy canes soufflé candy sugar plum macaroon jelly-o cake caramels apple pie. Bonbon cotton candy bear claw gingerbread chocolate wafer sesame snaps sesame snaps brownie. Jelly jelly-o sweet roll tiramisu candy soufflé sweet sesame snaps cupcake. Chupa chups sweet roll chocolate cake jelly-o cookie. Cookie cookie tootsie roll marshmallow apple pie candy liquorice pie. Sweet cookie sweet roll tiramisu jujubes powder. Candy caramels jelly oat cake ice cream cake jelly.</p>
+<p><strong>Bold paragraph text.</strong></p>
+<p><em>Emphasized paragraph text.</em></p>
+
+<blockquote>
+    <p>Blockquote text.</p>
+    <p>HR services teams provide expertise, consultation, and education on a variety of human resource topics including organizational effectiveness, employee relations, classification/compensation and recruitment, leave processes and training and development.  The HR service teams were developed to become familiar with the unique issues and concerns of individual departments or units.  As always, any of the HRS staff are available to assist.</p>
+</blockquote>
