Align with hrs theme updates

--- a/_patterns/elements/buttons.html
+++ b/_patterns/elements/buttons.html
@@ -8,20 +8,20 @@ show_source: true
 
 <main style="margin: 0;">
 
-	<h3>Primary Buttons</h3>
+	<h3>Primary Button</h3>
 
 	<button>Button</button>
 	<a class="button" href="#">Button (Link)</a>
-	<input type="submit" value="Input Submit">
 	<input type="button" value="Input Button">
+	<input type="reset" value="Input Reset">
 
-	<h3>Secondary Buttons</h3>
+	<h3>Call-to-Action Button</h3>
 
-	<button class="button-secondary">Secondary Button</button>
-	<a class="button-secondary" href="#">Secondary Button (Link)</a>
-	<input class="button-secondary" type="reset" value="Input Reset">
+	<button class="button-cta">Secondary Button</button>
+	<a class="button-cta" href="#">Secondary Button (Link)</a>
+	<input type="submit" value="Input Submit">
 
-	<h3>Flat Button Links</h3>
+	<h3>Flat Button Link</h3>
 
 	<a class="button-flat" href="#">Flat</a>
 
