--- a/_patterns/globals/links.html
+++ b/_patterns/globals/links.html
@@ -6,6 +6,8 @@ description: Some various link styles.
 show_source: true
 ---
 
+<main>
+
 <a href="#">A standard un-wrapped link.</a>
 
 <h1><a href="#">Heading Level 1 Link</a></h1>
@@ -20,8 +22,12 @@ show_source: true
 
 <h6><a href="#">Heading Level 6 Link</a></h6>
 
+<h1 class="article-title"><a href="#">Article Title Class Heading Link</a></h1>
+
 <p>HR services teams provide expertise, consultation, and education on a variety of human resource topics including organizational effectiveness, employee relations, classification/compensation and recruitment, leave processes and training and development.  The HR service teams were developed to become familiar with the unique issues and concerns of individual departments or units. <a href="#">Paragraph link text</a>. As always, any of the HRS staff are available to assist.</p>
 
 <blockquote>
     <p>HR services teams <a href="">Blockquote text link.</a> provide expertise, consultation, and education on a variety of human resource topics including organizational effectiveness, employee relations, classification/compensation and recruitment, leave processes and training and development.  The HR service teams were developed to become familiar with the unique issues and concerns of individual departments or units.  As always, any of the HRS staff are available to assist.</p>
 </blockquote>
+
+</main>
