--- a/_patterns/globals/typography.html
+++ b/_patterns/globals/typography.html
@@ -6,6 +6,8 @@ description: An overview of typographic styles.
 show_source: true
 ---
 
+<main>
+
 <h1>Heading Level 1</h1>
 
 <h2>Heading Level 2</h2>
@@ -29,3 +31,5 @@ show_source: true
     <p>Blockquote text.</p>
     <p>HR services teams provide expertise, consultation, and education on a variety of human resource topics including organizational effectiveness, employee relations, classification/compensation and recruitment, leave processes and training and development.  The HR service teams were developed to become familiar with the unique issues and concerns of individual departments or units.  As always, any of the HRS staff are available to assist.</p>
 </blockquote>
+
+</main>
